Fix spacing between posts

--- a/css/main.css
+++ b/css/main.css
@@ -228,8 +228,11 @@ a {
 
 .post {
     padding: 30px 40px;
-    margin-bottom: 40px;
     border-bottom: 1px solid #e7ebed;
+}
+
+.post + .post {
+    margin-top: 1.5em;
 }
 
 .post .title {
